1 fix(ci): separate clippy job to run only on stable    2    3 Clippy on beta Rust can introduce new lints that fail CI unexpectedly.    4 Separate clippy into its own job running only on stable, while keeping    5 build and test matrix on both stable and beta.    6    7 Use -W clippy::all to warn without failing on warnings.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build:
-    name: Build and Test
+    name: Build and Test (${{ matrix.rust }})
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -24,7 +24,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
-          components: clippy, rustfmt
+          components: rustfmt
 
       - name: Cache cargo registry
         uses: actions/cache@v4
@@ -46,8 +46,28 @@ jobs:
       - name: Run tests
         run: cargo test --verbose
 
+  clippy:
+    name: Clippy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: clippy
+
+      - name: Cache cargo registry
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-clippy-${{ hashFiles('**/Cargo.lock') }}
+
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features
+        run: cargo clippy --all-targets --all-features -- -W clippy::all
 
   docs:
     name: Documentation
