--- a/.github/workflows/swift-release.yml
+++ b/.github/workflows/swift-release.yml
@@ -12,6 +12,8 @@ jobs:
   build-xcframework:
     name: Build XCFramework
     runs-on: macos-latest
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/checkout@v4
